# FAB

./: FlowAnalysisLab.spec  README.md  main.py  pyproject.toml  requirements.txt
assets/: style.qss
controllers/: analysis_controller.py  lighting_correction_controller.py  preview_controller.py  roi_controller.py  rotate_controller.py  scan_controller.py  scan_controller_backup.py  scan_controller_broken.py  ui_controller.py
engine/: video_engine.py
helpers/: auto_channel.py  auto_fraction.py  lighting_correction.py
models/: analysis_results.py  roi.py  video_session.py
