[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FAB"
version = "1.0.0"
description = "Flow Analysis Lab - Video Analysis Tool"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "opencv-python>=4.5.0",
    "PyQt5>=5.15.0",
    "matplotlib>=3.4.0",
    "pillow>=8.0.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
